--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
  <body>
     <header>
-      <nav class="main-navigation">
+      <nav class="main-navigation container">
         <a href="index.html" class="header-logo">
-          <img src="img/nerds-logo.svg" alt="nerds">
+          <img src="img/nerds-logo.svg" alt="nerds" width="159.87" height="65.02">
         </a>
-        <ul>
-         <li"><a class="nav-list" href="#">студия</a></li>
+        <ul class="site-navigation">
+         <li><a class="nav-list" href="#">студия</a></li>
          <li><a class="nav-list" href="#">клиенты</a></li>
          <li><a class="nav-list" href="2page.html">магазин</a></li>
          <li><a class="nav-list" href="#">контанты</a></li>
@@ -23,7 +23,7 @@
     </header>
     <main>
       <h1 class="visually-hidden">Дизайн студия Nerds</h1>
-      <section>
+      <section class="container">
          <div class="slides visually-hidden">
            <h2>Узнать больше</h2>
            <ul>
@@ -51,11 +51,11 @@
 
       <section class="services">
        <h2 class="visually-hidden">Услуги</h2>
-       <ul>
+       <ul class="service-list container">
          <li class="services-item">
            <img src="img/notebook.jpg" width="300" height="146" alt="Веб-сайты">
            <h3>Веб-сайты</h3>
-           <p>Мир никогда не будет прежним б<br>после того как увидишь наш сайт</p>
+           <p>Мир никогда не будет прежним <br>после того как увидишь наш сайт!</p>
            <a class="a-btn a-btn--red" href="#">Заказать</a>
          </li>
          <li class="services-item">
