--- a/index.html
+++ b/index.html
@@ -72,35 +72,38 @@
          </li>
        </ul>
       </section>
-      <section class="information">
-       <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
-       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
-       <p class="bold-text">Выполнем заказы на разаработку:</p>
-       <ul>
-         <li class="inf-list">Веб-сайтов любой сложности</li>
-         <li class="inf-list">Мобильных предложений для IOS и Android</li>
-         <li class="inf-list">Слайдшоу и видео для корпоративных презентаци</li>
-       </ul>
-      </section>
-      <aside class="achievement">
-       <h2 class="visually-hidden" > Достижения </h2>
-       <img src="img/nerds-illustration 1.png" width="360" height="208" alt="nerds">
-       <h3>с 2004 года Любим точность во всем:</h3>
-       <ul>
-         <li class="achievement-list">
-           <p>146%</p>
-           <h3>Уровень самоотдачи</h3>
-         </li>
-         <li class="achievement-list">
-          <p>100%</p>
-          <h3>соблюдение сроков</h3>
-         </li>
-         <li class="achievement-list">
-          <p>50%</p>
-          <h3>Минимальная предоплата</h3>
-         </li>
-       </ul>
-      </aside>
+      <div class="info-block container">
+        <section class="information">
+          <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.Работаем не покладя рук, как роботы</p>
+          <p class="bold-text">Выполнем заказы на разаработку:</p>
+          <ul>
+            <li class="inf-list">Веб-сайтов любой сложности</li>
+            <li class="inf-list">Мобильных предложений для IOS и Android</li>
+            <li class="inf-list">Слайдшоу и видео для корпоративных презентаци</li>
+          </ul>
+         </section>
+         <aside class="achievement">
+          <h2 class="visually-hidden" > Достижения </h2>
+          <img src="img/nerds-illustration 1.png" width="360" height="208" alt="nerds">
+          <h3>с 2004 года Любим точность во всем:</h3>
+          <ul>
+            <li class="achievement-list">
+              <p>146%</p>
+              <h3>Уровень самоотдачи</h3>
+            </li>
+            <li class="achievement-list">
+             <p>100%</p>
+             <h3>соблюдение сроков</h3>
+            </li>
+            <li class="achievement-list">
+             <p>50%</p>
+             <h3>Минимальная предоплата</h3>
+            </li>
+          </ul>
+         </aside>
+      </div>
+
       <section>
        <h2 class="visually-hidden">Спонсоры</h2>
        <ul>
