--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
          </aside>
       </div>
 
-      <section>
+      <section class="container">
        <h2 class="visually-hidden">Спонсоры</h2>
-       <ul>
+       <ul class="sponsors-list">
          <li class="sponsors">
             <a href="#">
              <img src="img/html-academy.svg" width="199" height="68" alt="html academy">
@@ -133,14 +133,14 @@
     <footer>
       <section>
         <h2 class="visually-hidden">Как нас найти</h2>
-        <img src="img/map 1.png" alt="карта">
+        <img class="map" src="img/map1.png" alt="карта" width="1440" height="416">
         <div class="map-adds">
             <h2>NЁRDS DESIGN STUDIO</h2>
             <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <br>тел. +7 (812) 275-75-75</p>
             <button type="button">Напишите нам</button>
         </div>
       </section>
-      <ul class="s-network">
+      <ul class="s-network" class="container">
         <li>
           <a href="">
             <div class="s-network-list">
