--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
          <div class="slides">
            <h2 class="visually-hidden">Узнать больше</h2>
            <ul>
-             <li class="slide">
+             <li class="slide visually-hidden">
                <h3>Долго, Дорого, <br>скрупулёзно.</h3>
-               <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+               <p>Математически выверенный дизайн <br>для вашего сайта или мобильного приложения</p>
                <a>Узнать больше</a>
                <img src="img/nerds-index-slide1 1.png" width="760" height="431" alt="Долго, Дорого, скрупулёзно">
              </li>
-             <li hidden class="slide">
+             <li  class="slide visually-hidden">
                <h3>Любим математику <br>как никто другой</h2>
-               <p>Никакого креатива, только математические формулы для расчет идеальных пропорций</p>
+               <p>Никакого креатива, только математические формулы <br>для расчета идеальных пропорций</p>
                <a>Узнать больше</a>
                <img src="img/nerds-index-slide2 1.png" width="760" height="431" alt="любим математику как никто другой">
              </li>
-             <li hidden class="slide">
+             <li class="slide visually-hidden">
                <h3>Только ночь, <br>только хардкор</h2>
-               <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+               <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
                <a>Узнать больше</a>
                <img src="img/nerds-index-slide3 1.png" width="760" height="431" alt="Только ночь, только хардкор">
              </li>
@@ -72,6 +72,10 @@
          </li>
        </ul>
       </section>
+
+      <div class="retangle">
+      </div>
+
       <div class="info-block container">
         <section class="information">
           <h2>Мы - маленькая, но гордая дизаин-студия из Краснодара.</h2>
@@ -104,7 +108,10 @@
          </aside>
       </div>
 
-      <section class="container">
+      <div class="retangle">
+      </div>
+
+      <section class="container sponsor-margin">
        <h2 class="visually-hidden">Спонсоры</h2>
        <ul class="sponsors-list">
          <li class="sponsors">
@@ -129,6 +136,10 @@
           </li>
        </ul>
       </section>
+
+      <div class="retangle">
+      </div>
+
     </main>
     <footer>
       <section class="footer-map">
