--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="nav-list basket"><img src="img/cart-icon.svg" height="15" width="15">корзина</a>
       </nav>
     </header>
-    <main>
+    <main class="index">
       <h1 class="visually-hidden">Дизайн студия Nerds</h1>
       <section>
          <div class="slides">
