--- a/2page.html
+++ b/2page.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="secondpage">
+ <body class="secondpage">
     <header>
       <nav class="main-navigation container">
         <a href="index.html" class="header-logo">
@@ -21,20 +21,23 @@
         <a href="#" class="nav-list basket"><img src="img/cart-icon.svg" height="15" width="15">корзина</a>
       </nav>
     </header>
-   <main>
-     <div class="templates-shop">
+   <main class="templates-shop">
+     <div class="sp">
        <h1 >Магазин готовых шаблонов</h1>
      </div>
 
-     <section>
-       <h2>Фильтр товаров</h2>
-     </section>
+      <section class="template-filter">
+       <h2 class="visually-hidden">Фильтр товаров</h2>
+      </section>
 
-     <section class="templates-list">
-       <h2>список шаблонов</h2>
-       <ul>
+      <section class="filter-list">
+       <h2 class="visually-hidden">список шаблонов</h2>
+       <div class="sorting">
+
+       </div>
+       <ul class="templates-list">
          <li class="list-item">
-            <img src="img/img-sedona 1.jpg" alt="sedona" hidden="true">
+            <img src="img/img-sedona 1.jpg" alt="sedona">
             <div class="pp-text">
               <h3>Седона</h3>
               <p>Информационный сайт  <br> для туристов</p>
@@ -87,7 +90,7 @@
        </ul>
 
 
-       <ul class="pagination">
+       <ul class="pagination visually-hidden">
          <li class="one">
            <a href="#">1</a>
          </li>
@@ -102,8 +105,7 @@
          </li>
         </ul>
      </section>
-
-    </main>
+   </main>
 
     <footer>
       <section class="footer-map">
